force-app/main/default/objects/Bug_Test__c/Bug_Test__c.object-meta.xml
<CustomObject>
    <label>Bug Test</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Bug Test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bug Test</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>