force-app/main/default/objects/Bug_Test__c/fields/Bug_Field_1__c.field-meta.xml
<CustomField>
    <fullName>Bug_Field_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bug Field 1</label>
    <type>Checkbox</type>
</CustomField>