force-app/main/default/objects/Bug_Test__c/fields/Bug_Field_2__c.field-meta.xml
<CustomField>
    <fullName>Bug_Field_2__c</fullName>
    <label>Bug Field 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>