force-app/main/default/objects/Bug_Test__c/fields/Bug_Field_3__c.field-meta.xml
<CustomField>
    <fullName>Bug_Field_3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bug Field 3</label>
    <length>20</length>
    <type>Text</type>
</CustomField>