force-app/main/default/objects/Bug_Test__c/fields/Reported_On__c.field-meta.xml
<CustomField>
    <fullName>Reported_On__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reported On</label>
    <type>Date</type>
</CustomField>